[package]
name = "coin"
version = "0.1.0"
authors = ["Martin Gul <martingul@outlook.com>"]

[dependencies]
bincode = "*"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_bytes = "0.10.2"
serde_json = "1.0.3" # jfs is using 1.0.3 but the newest version is 1.0.6
time = "*"
secp256k1 = "*"
rand = "*"
base58 = "*"
sha2 = "*"
rusqlite = "*"
hex = "0.2.0"
jfs = "*"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
reqwest = "0.8.1"
