[package]
name = "coin"
version = "0.1.0"
authors = ["Martin Gul <martingul@outlook.com>"]

[dependencies]
time = "*"

# Http
reqwest = "0.8.1"
rouille = "1.0.3"

# Cryptography
secp256k1 = "*"
rand = "*"
sha2 = "*"

# Serialization
bincode = "*"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_bytes = "0.10.2"
serde_json = "1.0.3" # jfs is using 1.0.3 but the newest version is 1.0.6
hex = "0.2.0"
base58 = "*"
rustc-serialize = "0.3"

# Database
rusqlite = "*"
postgres = "0.15"
postgres-derive = "0.3"
postgres_array = "0.9.0"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
